添加动漫风格头像生成功能，更新版本至2.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,7 @@ venv.bak/
 # Project specific
 update_packages/*
 !update_packages/.gitkeep
+
+# Avatar files
+static/avatars/*
+!static/avatars/default.jpg
