--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,5 @@ update_packages/*
 # Avatar files
 static/avatars/*
 !static/avatars/default.jpg
+__pycache__/*
+__pycache__/forms.cpython-311.pyc
